error/20200001/20_error.txt
/home/kps/ssu_score/ssu_score/STD_DIR/20200001/20.c: In function ‘main’:
/home/kps/ssu_score/ssu_score/STD_DIR/20200001/20.c:17:15: warning: implicit declaration of function ‘open’ [-Wimplicit-function-declaration]
     if ((fd = open(fname, O_RDONLY)) < 0) {   
               ^~~~
/home/kps/ssu_score/ssu_score/STD_DIR/20200001/20.c:17:27: error: ‘O_RDONLY’ undeclared (first use in this function)
     if ((fd = open(fname, O_RDONLY)) < 0) {   
                           ^~~~~~~~
/home/kps/ssu_score/ssu_score/STD_DIR/20200001/20.c:17:27: note: each undeclared identifier is reported only once for each function it appears in
